[package]
name = "stack-cstr"
version = "0.1.3"
edition = "2024"
authors = ["Junkang Yuan <yuanjunkang@gmail.com>"]
description = "High-performance stack-to-heap C string creation for Rust with FFI support"
repository = "https://github.com/fxdmhtt/stack-cstr"
license = "GPL-2.0"
readme = "README.md"
keywords = ["CStr", "CString", "FFI"]
categories = ["development-tools::ffi", "memory-management"]

[dependencies]
arrayvec = "0.7.6"
thiserror = "2.0.16"
